# Mobile-robot-drive-based-on-stepper-28byj-48-motor

./: .gitignore  CMakeLists.txt  README.md
blink/: CMakeLists.txt  blink.c  blink_test2.code-workspace  circ_buffer.c  circ_buffer.h  drives.c  drives.h  parse.c  parse.h  timers.c  timers.h  uart.c  uart.h
blink/external_uart/: uart.c  uart.h
doc/: diag_2.drawio
